    * [S2GRAPH-193] - Add README for S2Jobs sub-project
    * [S2GRAPH-209] - GlobalIndex supports field data types such as Numeric to enable Range Query
    * [S2GRAPH-210] - Rename package `mysqls` to `schema`
    * [S2GRAPH-213] - Abstract Query/Mutation from Storage.
    * [S2GRAPH-214] - Add REAME for movielens examples

** New Feature
    * [S2GRAPH-123] - Support different index on out/in direction.
    * [S2GRAPH-125] - Add options field on Label model for controlling advanced options.
    * [S2GRAPH-166] - Provide embeddable storage backend using RocksDB.
    * [S2GRAPH-175] - Provide Elastic Search Index Provider.
    * [S2GRAPH-172] - Suggest to implement GraphQL as standard web interface for S2Graph.
    * [S2GRAPH-177] - Add support for createServiceColumn/addVertex APIs on GraphQL.
    * [S2GRAPH-185] - Support Spark Structured Streaming to work with data in streaming and batch.
    * [S2GRAPH-183] - Provide batch job to dump data stored in HBase into file.
    * [S2GRAPH-206] - Generalize machine learning model serving.
    * [S2GRAPH-215] - Implement a Storage Backend for JDBC driver, such as H2, MySql using the Mutator and Fetcher interfaces

** Task
    * [S2GRAPH-162] - Update year in the NOTICE file.
    * [S2GRAPH-211] - Include 's2jobs' test in CI
    * [S2GRAPH-212] - Fix broken markdown on README.md.

Release 0.1.0 - Released

  NEW FEATURES

    S2GRAPH-34: Provide option to select which field in edge's properties to run timeDecay function (Committed by DOYUNG YOON).

    S2GRAPH-35: Provide normalize option on query (Committed by DOYUNG YOON).

    S2GRAPH-36: Provide Blocking API for Edge/Vertex operations (Committed by DOYUNG YOON).

    S2GRAPH-32: Support variable such as now, day, hour on query (Committed by DOYUNG YOON).

    S2GRAPH-45: Provide way to call specific bucket on experiment (Committed by DOYUNG YOON).

    S2GRAPH-33: Support weighted sum of multiple query results (Committed by DOYUNG YOON).
