@@ -78,6 +78,7 @@ Release Notes - S2Graph - Version 0.2.0
     * [S2GRAPH-210] - Rename package `mysqls` to `schema`
     * [S2GRAPH-213] - Abstract Query/Mutation from Storage.
     * [S2GRAPH-214] - Add REAME for movielens examples
+    * [S2GRAPH-216] - Provide a transform directive in the GraphQL query result.
 
 ** New Feature
     * [S2GRAPH-123] - Support different index on out/in direction.
